# Chestnut-Name-Picker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
data/: test_data.xlsx
docs/: README.md  architecture.md  data_handler.md  development.md  selector.md  styles.md  ui.md  utils.md
src/: data_handler.py  selector.py  styles.py  ui.py  utils.py
src/ui/: __init__.py  main_window.py  preview_window.py  rule_frame.py
tests/: check_excel.py  test_boundary.py  test_dynamic_adapt.py  test_multirule.py  test_selector.py
