[project]
name = "chestnut-name-picker"
version = "1.2.0"
description = "基于 ttkbootstrap 的名单随机抽选工具，支持多规则筛选"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "ttkbootstrap>=1.20.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
